--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.0.2
+  sqflite_common_ffi: ^2.0.0
   path: ^1.8.3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  http: ^0.13.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
